traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:12: error: reassignment to val
  if(getX = large-1 && getY = hauteur-1){
          ^